# game-experiment

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  conanfile.txt
data/: manifest.yaml
docs/: _config.yml  index.md
docs/_sass/custom/: custom.scss
src/: main.cpp
src/common/: CMakeLists.txt
src/common/demo/: Demo.cpp  Demo.h
src/common/logger/: Log.cpp  Log.h
src/core/: Game.cpp  Game.h
src/demo/triangle/: CMakeLists.txt  main.cpp
src/demo/triangle/shaders/: fragment.glsl  vertex.glsl
src/demo/window/: CMakeLists.txt  main.cpp
